--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# AfyaRescue: email for critical emergency alerts (optional)
+# AFYARESCUE_CRITICAL_ALERT_EMAIL=
